# AttendancePro

./: .checkov.yml  .env  .env.example  .env.minimal  .env.production  .env.security  .gitleaks.toml  .gitleaksignore  .trivyignore  AttendancePlatform.sln  CI_CD_PIPELINE_VALIDATION_REPORT.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  LOCAL_DEPLOYMENT_COMMANDS.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_IMPLEMENTATION_PLAN.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_IMPLEMENTATION_PLAN.md  PHASE_5_VERIFICATION_COMPLETE.md  PHASE_6_COMPLETION_REPORT.md  PHASE_6_IMPLEMENTATION_PLAN.md  PHASE_6_TASK_IMPLEMENTATION.md  PHASE_6_VERIFICATION_COMPLETE.md  PHASE_7_TASK_IMPLEMENTATION.md  PHASE_7_VERIFICATION_COMPLETE.md  PHASE_8_TASK_IMPLEMENTATION.md  PHASE_8_VERIFICATION_COMPLETE.md  README.md  SECURITY_VALIDATION_REPORT.md  docker-compose.production.yml  docker-compose.yml
src/backend/AttendancePlatform.Api/: AttendancePlatform.Api.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.Production.json  appsettings.json  comprehensive_services.py  fly.toml  main.py  pyproject.toml  requirements.txt  run.py  setup.py  start_server.py
src/backend/AttendancePlatform.Api/Controllers/: ActiveDirectoryController.cs  AdvancedAnalyticsController.cs  ApiTestController.cs  AttendanceController.cs  AuthController.cs  BlockchainController.cs  BusinessIntelligenceController.cs  CollaborationController.cs  ComplianceController.cs  ComprehensiveAdvancedTechnologyController.cs  (+27 more)
(+827 files in other folders)
