[tool.poetry]
name = "attendanceplatform-api"
version = "0.1.0"
description = "Hudur Enterprise Platform Backend API"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
pyjwt = "2.8.0"
bcrypt = "4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
